--- a/CanHazFunny/CanHazFunny.Tests/CanHazFunny.Tests.csproj
+++ b/CanHazFunny/CanHazFunny.Tests/CanHazFunny.Tests.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-
+    <TargetFramework>net7.0</TargetFramework>
+	  <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+	  <LangVersion>latest</LangVersion>
+	  <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
