--- a/CanHazFunny/CanHazFunny/CanHazFunny.csproj
+++ b/CanHazFunny/CanHazFunny/CanHazFunny.csproj
@@ -2,7 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+	  <Nullable>enable</Nullable>
+    <TargetFramework>net7.0</TargetFramework>
+	  <LangVersion>latest</LangVersion>
+  <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
 </Project>
